--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -99,9 +99,15 @@ nav li {
 	font-size: 1.2em;
 }
 
-li:hover {
+nav li a:hover {
 	color: #B1663C;
 }
+
+nav li a {
+	text-decoration: none;
+	color: black;
+}
+
 #introduction {
 	display: flex;
 	align-items: center;
