--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -136,17 +136,17 @@ nav li a {
 	margin-bottom: 1em;
 }
 
-.filtres {
+.filters {
 	width: 100%;
 	display: flex;
 	flex-flow: row nowrap;
 	justify-content: center;
 	margin-bottom: 50px;
 }
-.filtres a {
+.filters a {
 	text-decoration: none;
 }
-.filtre {
+.filter {
 	min-width: 100px;
 	font-family: 'Syne';
 	padding: 10px 15px 10px 15px;
@@ -227,3 +227,29 @@ footer nav ul {
 	margin: 2em
 }
 
+
+
+
+.modal {
+
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0,0,0,0.8);
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+}
+
+.modal-content {
+	width: 600px;
+	height: 700px;
+	padding: 20px;
+	border-radius: 10px;
+	background-color: white;
+	overflow: auto;
+}
