--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -162,8 +162,8 @@ nav li a {
 }
 
 .active {
-	background-color: #1D6154;
-	color: white;
+	background-color: #1D6154 !important;
+	color: white !important;
 }
 
 .gallery {
@@ -227,18 +227,36 @@ footer nav ul {
 	margin: 2em
 }
 
+#portfolio h2 {
+	margin-bottom: 90px;
+}
 
+.modal-link {
+	height: 30px;
+	width: fit-content;
+	display: inline-flex;
+	align-items: center;
+	text-decoration: none;
+	font-family: "Work Sans";
+	font-size: 14px;
+	color: black;
+	font-weight: normal;
+	padding-left: 30px;
+}
 
+.modal-link iframe {
+	width: 18px;
+	height: 18px;
+	margin-right: 10px;
+}
 
 .modal {
-
 	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
 	background-color: rgba(0,0,0,0.8);
-
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -252,4 +270,159 @@ footer nav ul {
 	border-radius: 10px;
 	background-color: white;
 	overflow: auto;
+
+	display: flex;
+	flex-flow: column nowrap;
+	align-content: center;
+	align-items: center;
+}
+
+.modal-content h2 {
+	font-family: 'Work Sans';
+	font-size: 26px;
+	font-weight: normal;
+	margin: 25px 0 0 0;
+	color: black;
+
+}
+/*--------------------------------------------------------------------*/
+.js-close-modal {
+	align-self: flex-end;
+}
+.project-container {
+	overflow: auto;
+	width: 560px;
+	padding: 15px 60px 0 60px;
+	margin-bottom: 35px;
+	display: flex;
+	justify-content: flex-start;
+	flex-flow: row wrap;
+
+}
+
+
+
+.modal-card {
+	position: relative;
+	width: 75px;
+	margin:0 5px 15px 5px;
+}
+
+.project-img {
+	width: 100%;
+	height: auto;
+}
+
+.edit-link {
+	text-decoration: none;
+	font-family: 'Work Sans';
+	color: black;
+	font-size: 14px;
+}
+
+.modal-card a:hover {
+	font-weight: bold;
+}
+
+.delete-btn-icon {
+	width: 20px;
+	height: 20px;
+}
+.delete-btn-icon img {
+	width: 20px;
+	height: 20px;
+}
+
+.add-project-btn {
+	min-width: 240px;
+	font-family: 'Syne';
+	padding: 10px 15px 10px 15px;
+	font-size: 14px;
+	font-weight: 700;
+	text-align: center;
+	border: 1px solid #1D6154;
+	background-color: #1D6154;
+	color: white;
+	margin: 35px 0 20px 0;
+	border-radius: 25px;
+	cursor: pointer;
+}
+.add-project-btn:hover {
+	background-color: #0E2F28;
+}
+
+.modal-content hr {
+	margin: 0;
+	color: #B3B3B3;
+	width: 420px;
+	font-size: 1px;
+}
+
+.delete-gallery-btn {
+	text-decoration: none;
+	color: #D65353;
+	font-family: 'Syne';
+	font-size: 14px;
+	font-weight: lighter;
+}
+
+.card-delete-btn {
+	position: absolute;
+	right: 5px;
+	top: 5px;
+	width: 20px;
+	height: 20px;
+	border-radius: 3px;
+	background-color: black;
+
+}
+
+.card-delete-btn iframe {
+	width: 9px;
+	height: 9px;
+}
+
+/* edit mod barre*/
+
+
+.edit-mod-bar {
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	background-color: black;
+	color: white;
+	width: 100%;
+	height: 60px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.edit-mod-bar iframe {
+	width: 20px;
+	height: 20px;
+	margin-right: 10px;
+}
+
+.publish-button {
+	font-family: 'Work Sans';
+	padding: 10px 15px 10px 15px;
+	font-size: 14px;
+	text-align: center;
+	border: 1px solid #1D6154;
+	background-color: white;
+	color: black;
+	margin-left: 20px;
+	border-radius: 25px;
+	cursor: pointer;
+}
+.connected {
+	margin-top: 110px;
+}
+
+
+/* If connected, hide filter show modal button, if not **/
+
+.hidden {
+	display: none;
 }
