--- a/FrontEnd/assets/frontstyle.css
+++ b/FrontEnd/assets/frontstyle.css
@@ -1,6 +1,5 @@
-
-
-main {
+/*---------form CSS--------------*/
+.login-body {
     padding: 100px 0 350px 0;
 }
 
@@ -15,7 +14,7 @@ main {
     font-weight: 500;
 }
 
-.login-form input {
+form input {
     width: 380px;
     height: 50px;
     margin-top: 5px;
@@ -23,7 +22,7 @@ main {
     box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
 
-.form-control {
+form > div {
     padding-top: 30px;
     display: flex;
     flex-flow: column nowrap;
@@ -47,6 +46,11 @@ form button {
     color: white;
     border: none;
     margin-top: 35px;
+    cursor: pointer;
+}
+
+form button:hover {
+    background-color: #0E2F28;
 }
 
 .reset {
@@ -64,15 +68,7 @@ form button {
     text-decoration: underline;
 }
 
-footer {
-    background-color: white;
-    width: 100%;
-    height: 60px;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-}
-
 .error {
     color: red;
 }
+/*---------------------------------------------------*/
