--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -231,6 +231,16 @@ footer nav ul {
 	margin-bottom: 90px;
 }
 
+/*---------------GALLERY FIGURE ANIMATION-----------------*/
+.gallery figure {
+	position: relative;
+	z-index: 1;
+	animation: fadeIn 0.5s both;
+}
 
+@keyframes fadeIn {
+	from { opacity: 0}
+	to { opacity: 1}
+}
 
 
